--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.4.1",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
